--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Uthai surawit
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.facebook.com/photo.php?fbid=1335158039904272&set=a.102963856457036.8100.100002302661617&type=3&source=11&referrer_profile_id=100002302661617
+avatar: https://scontent.fbkk14-1.fna.fbcdn.net/v/t1.0-1/p160x160/17426288_1335158039904272_9055366211574509108_n.jpg?oh=0cef03e430f42b56989bf4fc59f8a8c0&oe=5A19619F
 
 #
 # Flags below are optional
